--- a/Level1/Unit1/WordSearch/index.html
+++ b/Level1/Unit1/WordSearch/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hannah Word Search Game</title>
     <style>
+        /* Estilos originais do arquivo */
         body {
             font-family: 'Arial', sans-serif;
             margin: 0;
@@ -149,106 +150,47 @@
     </style>
 </head>
 <body>
-<button onclick="history.back()" id="back-button">Back</button>
+    <button onclick="history.back()" id="back-button">Back</button>
 
-<h1>Hannah Word Search Game</h1>
-<button id="reset-button">Restart Game</button>
-<div id="word-search-container">
-    <canvas id="word-search-canvas"></canvas>
-    <div id="words-list">
-        <h2>Words to Find</h2>
-        <ul id="words"></ul>
+    <h1>Hannah Word Search Game</h1>
+    <button id="reset-button">Restart Game</button>
+    <div id="word-search-container">
+        <canvas id="word-search-canvas"></canvas>
+        <div id="words-list">
+            <h2>Words to Find</h2>
+            <ul id="words"></ul>
+        </div>
     </div>
-</div>
 
-<!-- Modal de conclusão -->
-<div id="overlay"></div>
-<div id="completion-modal">
-    <h2>Phase Completed!</h2>
-    <p>Congratulations! You have completed this phase.</p>
-    <button onclick="closeModal()">Close</button>
-</div>
+    <!-- Modal de conclusão -->
+    <div id="overlay"></div>
+    <div id="completion-modal">
+        <h2>Phase Completed!</h2>
+        <p>Congratulations! You have completed this phase.</p>
+        <button onclick="closeModal()">Close</button>
+    </div>
 
-<!-- Scripts do Firebase -->
-<script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
-<script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
-<script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
-<script src="script.js"></script>
+    <!-- Scripts do Firebase -->
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
 
-<script>
-    // Configuração do Firebase
-    const firebaseConfig = {
-        apiKey: "AIzaSyDGgo2H_hDKXF88xN7XnLFNUj8ikMY7Xdc",
-        authDomain: "hannahenglishcourse.firebaseapp.com",
-        projectId: "hannahenglishcourse",
-        storageBucket: "hannahenglishcourse.appspot.com",
-        messagingSenderId: "449818788486",
-        appId: "1:449818788486:web:8a49d3f68591e6fb3f0707",
-        measurementId: "G-07VVJG9LRS",
-        databaseURL: "https://hannahenglishcourse-default-rtdb.asia-southeast1.firebasedatabase.app"
-    };
-    firebase.initializeApp(firebaseConfig);
+    <!-- Configuração do Firebase -->
+    <script>
+        const firebaseConfig = {
+            apiKey: "AIzaSyDGgo2H_hDKXF88xN7XnLFNUj8ikMY7Xdc",
+            authDomain: "hannahenglishcourse.firebaseapp.com",
+            projectId: "hannahenglishcourse",
+            storageBucket: "hannahenglishcourse.appspot.com",
+            messagingSenderId: "449818788486",
+            appId: "1:449818788486:web:8a49d3f68591e6fb3f0707",
+            measurementId: "G-07VVJG9LRS",
+            databaseURL: "https://hannahenglishcourse-default-rtdb.asia-southeast1.firebasedatabase.app"
+        };
+        firebase.initializeApp(firebaseConfig);
+    </script>
 
-    // Função para capturar fase, level e unit do URL
-    function getPhaseFromURL() {
-        const params = new URLSearchParams(window.location.search);
-        return params.get('fase');
-    }
-
-    function getLevelAndUnitFromURL() {
-        const url = window.location.pathname;
-        const parts = url.split('/');
-        const level = parts[1];
-        const unit = parts[2];
-        return { level, unit };
-    }
-
-    // Função para verificar autenticação do usuário
-    function ensureUserIsAuthenticated(callback) {
-        firebase.auth().onAuthStateChanged(function(user) {
-            if (user) {
-                callback(user.uid);
-            } else {
-                console.error("Usuário não autenticado");
-            }
-        });
-    }
-
-    // Função para atualizar o progresso no banco de dados
-    async function updateNextPhase(userId) {
-        const currentPhase = getPhaseFromURL();
-        const { level, unit } = getLevelAndUnitFromURL();
-        const dbRef = firebase.database().ref(`usuarios/${userId}/progresso/${level}/${unit}`);
-
-        try {
-            if (currentPhase === "last") {
-                const nextUnit = `Unit${parseInt(unit.replace('Unit', '')) + 1}`;
-                await firebase.database().ref(`usuarios/${userId}/progresso/${level}/${nextUnit}`).set({ fase1: true });
-            } else if (currentPhase === "end") {
-                const nextLevel = `Level${parseInt(level.replace('Level', '')) + 1}`;
-                await firebase.database().ref(`usuarios/${userId}/progresso/${nextLevel}/Unit1`).set({ fase1: true });
-            } else {
-                const nextPhase = parseInt(currentPhase) + 1;
-                await dbRef.update({ [`fase${currentPhase}`]: true, [`fase${nextPhase}`]: true });
-            }
-        } catch (error) {
-            console.error("Erro ao atualizar o progresso da fase:", error);
-        }
-    }
-
-    // Função para exibir o modal de conclusão
-    function showCompletionModal() {
-        document.getElementById('overlay').style.display = 'block';
-        document.getElementById('completion-modal').style.display = 'block';
-        ensureUserIsAuthenticated(updateNextPhase); // Atualiza o progresso ao concluir a fase
-    }
-
-    // Função para fechar o modal de conclusão
-    function closeModal() {
-        document.getElementById('overlay').style.display = 'none';
-        document.getElementById('completion-modal').style.display = 'none';
-    }
-</script>
-
+    <!-- Script do jogo -->
+    <script src="script.js"></script>
 </body>
 </html>
