--- a/Level1/Unit1/WordSearch/index.html
+++ b/Level1/Unit1/WordSearch/index.html
@@ -183,7 +183,7 @@
             projectId: "hannahenglishcourse",
             storageBucket: "hannahenglishcourse.appspot.com",
             messagingSenderId: "449818788486",
-            appId: "1:449818788486:web:8a49d3f68591e6fb3f0707",
+            appId: "APP_ID",
             measurementId: "G-07VVJG9LRS",
             databaseURL: "https://hannahenglishcourse-default-rtdb.asia-southeast1.firebasedatabase.app"
         };
