--- a/Level1/Unit1/listening.html
+++ b/Level1/Unit1/listening.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html> 
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -23,59 +23,46 @@
         // Initialize Firebase
         firebase.initializeApp(firebaseConfig);
 
-        // Function to unlock specific phases for students
-        function unlockStudentPhases(phasesUnlocked) {
-            const phases = document.querySelectorAll('.phase');
-            phases.forEach((phase, index) => {
-                if (index < phasesUnlocked) {
-                    phase.classList.add('unlocked');
-                    phase.disabled = false; // Enable phase button
+        // Test Firebase connection
+        firebase.database().ref('/').once('value')
+          .then((snapshot) => {
+            console.log('Database connected:', snapshot.val());
+          })
+          .catch((error) => {
+            console.error('Error connecting to database:', error);
+          });
+
+        // Função para verificar o papel do usuário e liberar todas as fases se for professor ou proprietário
+        function liberarTodasFasesSeProfessorOuProprietario() {
+            firebase.auth().onAuthStateChanged(user => {
+                if (user) {
+                    // Obtém o papel do usuário do banco de dados
+                    const userRef = firebase.database().ref(`usuarios/${user.uid}/role`);
+                    userRef.once('value').then(snapshot => {
+                        const role = snapshot.val();
+                        if (role === 'professor' || role === 'proprietario') {
+                            // Lógica para liberar todas as fases
+                            liberarTodasAsFases();
+                        }
+                    });
                 }
             });
         }
 
-        // Function to unlock all phases
-        function unlockAllPhases() {
-            const phases = document.querySelectorAll('.phase');
-            phases.forEach(phase => {
-                phase.classList.add('unlocked');
-                phase.disabled = false; // Enable phase button
+        // Função para liberar todas as fases
+        function liberarTodasAsFases() {
+            // Adicione aqui a lógica específica para liberar todas as fases (ajuste conforme a estrutura do seu jogo)
+            console.log('Todas as fases foram liberadas.');
+            // Exemplo: liberar todas as fases visualmente
+            const fases = document.querySelectorAll('.fase-bloqueada');
+            fases.forEach(fase => {
+                fase.classList.remove('fase-bloqueada');
+                fase.classList.add('fase-desbloqueada');
             });
         }
 
-        // Check user role and unlock phases accordingly
-        firebase.auth().onAuthStateChanged((user) => {
-            if (user) {
-                const userId = user.uid;
-                const userRoleRef = firebase.database().ref(`/usuarios/${userId}/role`);
-                const userProgressRef = firebase.database().ref(`/usuarios/${userId}/progresso`);
-
-                // Get user role
-                userRoleRef.once('value')
-                    .then((snapshot) => {
-                        const role = snapshot.val();
-                        if (role === 'professor' || role === 'proprietario') {
-                            // Unlock all phases if the user is a professor or owner
-                            unlockAllPhases();
-                        } else if (role === 'aluno') {
-                            // Get user progress for students
-                            userProgressRef.once('value')
-                                .then((progressSnapshot) => {
-                                    const progressData = progressSnapshot.val();
-                                    if (progressData && progressData.lastPhaseUnlocked) {
-                                        unlockStudentPhases(progressData.lastPhaseUnlocked);
-                                    }
-                                })
-                                .catch((error) => {
-                                    console.error('Error fetching user progress:', error);
-                                });
-                        }
-                    })
-                    .catch((error) => {
-                        console.error('Error fetching user role:', error);
-                    });
-            }
-        });
+        // Chamar a função ao carregar a página
+        window.addEventListener('load', liberarTodasFasesSeProfessorOuProprietario);
     </script>
 </head>
 <body>
@@ -87,14 +74,6 @@
         <!-- Imagem de título centralizada sobre o fundo -->
         <div class="title-container">
             <img src="../../imagens/titulo.png" alt="Hannah English Course" class="title-image">
-        </div>
-
-        <!-- Fases (Exemplo) -->
-        <div class="phase-container">
-            <button class="phase locked" disabled>Phase 1</button>
-            <button class="phase locked" disabled>Phase 2</button>
-            <button class="phase locked" disabled>Phase 3</button>
-            <!-- Adicione mais fases conforme necessário -->
         </div>
 
         <!-- SVG para as linhas -->
