--- a/Level1/Unit1/listening.html
+++ b/Level1/Unit1/listening.html
@@ -1,10 +1,11 @@
-<!DOCTYPE html> 
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hannah English Course</title>
     <link rel="stylesheet" href="style.css">
+
     <!-- Firebase Configuration and Initialization -->
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
@@ -22,21 +23,73 @@
         };
         // Initialize Firebase
         firebase.initializeApp(firebaseConfig);
-
-        // Test Firebase connection
-        firebase.database().ref('/').once('value')
-          .then((snapshot) => {
-            console.log('Database connected:', snapshot.val());
-          })
-          .catch((error) => {
-            console.error('Error connecting to database:', error);
-          });
     </script>
+
+    <!-- CSS para o quadro branco -->
+    <style>
+        .login-container {
+            display: flex;
+            align-items: center;
+            gap: 10px;
+            position: absolute;
+            top: 20px;
+            right: 60px;
+            z-index: 10;
+            background-color: white;
+            padding: 10px;
+            border-radius: 8px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            cursor: pointer;
+        }
+
+        .user-icon {
+            width: 40px;
+            height: 40px;
+            border-radius: 50%;
+        }
+
+        .user-name {
+            font-size: 14px;
+            color: #333;
+            margin: 0;
+        }
+
+        .dropdown {
+            display: none;
+            position: absolute;
+            top: 60px;
+            right: 0;
+            background-color: white;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            z-index: 1;
+            border-radius: 4px;
+            min-width: 150px;
+        }
+
+        .dropdown a {
+            display: block;
+            padding: 10px;
+            text-decoration: none;
+            color: #333;
+            font-size: 16px;
+            text-align: left;
+        }
+
+        .dropdown a:hover {
+            background-color: #f2f2f2;
+        }
+    </style>
 </head>
 <body>
 
     <!-- Botão Back -->
     <a href="javascript:history.back()" class="back-button">Back</a>
+
+    <!-- Quadro Branco -->
+    <div class="login-container" id="loginContainer">
+        <a href="Formulario/login.html" class="login-button" id="loginLink">Login</a>
+        <div class="dropdown" id="userDropdown"></div>
+    </div>
 
     <div class="map-container" id="mapContainer">
         <!-- Imagem de título centralizada sobre o fundo -->
@@ -47,6 +100,77 @@
         <!-- SVG para as linhas -->
         <svg id="linesSvg" class="lines-svg"></svg>
     </div>
+
+    <script>
+        document.addEventListener('DOMContentLoaded', function() {
+            const database = firebase.database();
+            const auth = firebase.auth();
+
+            auth.onAuthStateChanged(user => {
+                if (user) {
+                    const userId = user.uid;
+                    updateLoginContainer(userId);
+                }
+            });
+
+            function updateLoginContainer(userId) {
+                const loginLink = document.getElementById("loginLink");
+                const userDropdown = document.getElementById("userDropdown");
+
+                const userRef = firebase.database().ref('usuarios/' + userId);
+                userRef.once('value').then((snapshot) => {
+                    const userData = snapshot.val();
+                    const userName = userData.nome || user.email;
+                    const userAvatar = userData.avatar ? `imagens/${userData.avatar}` : 'imagens/bonecologin1.png';
+
+                    loginLink.innerHTML = `<img src="${userAvatar}" alt="User Icon" class="user-icon"><p class="user-name">${userName}</p>`;
+                    loginLink.removeAttribute('href');
+
+                    let dashboardLink = '';
+                    if (userData.role === 'proprietario') {
+                        dashboardLink = '<a href="painel_proprietario.html" class="dashboard-link">OWNER DASHBOARD</a>';
+                    } else if (userData.role === 'professor') {
+                        dashboardLink = '<a href="painel_professor.html" class="dashboard-link">TEACHER DASHBOARD</a>';
+                    } else if (userData.role === 'aluno') {
+                        dashboardLink = '<a href="painel_aluno.html" class="dashboard-link">STUDENT DASHBOARD</a>';
+                    }
+
+                    userDropdown.innerHTML = `${dashboardLink}<a href="#" id="logout">LEAVE</a>`;
+                });
+            }
+
+            // Alternar o dropdown ao clicar
+            document.getElementById("loginContainer").addEventListener("click", function(event) {
+                const user = firebase.auth().currentUser;
+                if (!user) return;
+
+                event.preventDefault();
+                const dropdown = document.getElementById("userDropdown");
+                dropdown.style.display = (dropdown.style.display === 'none' || dropdown.style.display === '') ? 'block' : 'none';
+            });
+
+            // Fecha o dropdown ao clicar fora dele
+            window.addEventListener("click", function(event) {
+                const dropdown = document.getElementById("userDropdown");
+                const loginContainer = document.getElementById("loginContainer");
+                if (!loginContainer.contains(event.target)) {
+                    dropdown.style.display = 'none';
+                }
+            });
+
+            // Função para deslogar
+            document.addEventListener("click", function(event) {
+                if (event.target.id === "logout") {
+                    firebase.auth().signOut().then(() => {
+                        console.log("Usuário deslogado");
+                        location.reload();
+                    }).catch((error) => {
+                        console.error("Erro ao deslogar:", error);
+                    });
+                }
+            });
+        });
+    </script>
 
     <script src="script.js"></script>
 </body>
