--- a/Level1/Unit1/listening.html
+++ b/Level1/Unit1/listening.html
@@ -6,7 +6,7 @@
     <title>Hannah English Course</title>
     <link rel="stylesheet" href="style.css">
 
-    <!-- Firebase Configuration and Initialization -->
+    <!-- Firebase Configuration -->
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
@@ -21,7 +21,6 @@
             measurementId: "G-07VVJG9LRS",
             databaseURL: "https://hannahenglishcourse-default-rtdb.asia-southeast1.firebasedatabase.app"
         };
-        // Initialize Firebase
         firebase.initializeApp(firebaseConfig);
     </script>
 
@@ -41,19 +40,16 @@
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
             cursor: pointer;
         }
-
         .user-icon {
             width: 40px;
             height: 40px;
             border-radius: 50%;
         }
-
         .user-name {
             font-size: 14px;
             color: #333;
             margin: 0;
         }
-
         .dropdown {
             display: none;
             position: absolute;
@@ -65,7 +61,6 @@
             border-radius: 4px;
             min-width: 150px;
         }
-
         .dropdown a {
             display: block;
             padding: 10px;
@@ -74,7 +69,6 @@
             font-size: 16px;
             text-align: left;
         }
-
         .dropdown a:hover {
             background-color: #f2f2f2;
         }
@@ -92,85 +86,11 @@
     </div>
 
     <div class="map-container" id="mapContainer">
-        <!-- Imagem de título centralizada sobre o fundo -->
         <div class="title-container">
             <img src="../../imagens/titulo.png" alt="Hannah English Course" class="title-image">
         </div>
-
-        <!-- SVG para as linhas -->
         <svg id="linesSvg" class="lines-svg"></svg>
     </div>
-
-    <script>
-        document.addEventListener('DOMContentLoaded', function() {
-            const database = firebase.database();
-            const auth = firebase.auth();
-
-            auth.onAuthStateChanged(user => {
-                if (user) {
-                    const userId = user.uid;
-                    updateLoginContainer(userId);
-                }
-            });
-
-            function updateLoginContainer(userId) {
-                const loginLink = document.getElementById("loginLink");
-                const userDropdown = document.getElementById("userDropdown");
-
-                const userRef = firebase.database().ref('usuarios/' + userId);
-                userRef.once('value').then((snapshot) => {
-                    const userData = snapshot.val();
-                    const userName = userData.nome || user.email;
-                    const userAvatar = userData.avatar ? `imagens/${userData.avatar}` : 'imagens/bonecologin1.png';
-
-                    loginLink.innerHTML = `<img src="${userAvatar}" alt="User Icon" class="user-icon"><p class="user-name">${userName}</p>`;
-                    loginLink.removeAttribute('href');
-
-                    let dashboardLink = '';
-                    if (userData.role === 'proprietario') {
-                        dashboardLink = '<a href="painel_proprietario.html" class="dashboard-link">OWNER DASHBOARD</a>';
-                    } else if (userData.role === 'professor') {
-                        dashboardLink = '<a href="painel_professor.html" class="dashboard-link">TEACHER DASHBOARD</a>';
-                    } else if (userData.role === 'aluno') {
-                        dashboardLink = '<a href="painel_aluno.html" class="dashboard-link">STUDENT DASHBOARD</a>';
-                    }
-
-                    userDropdown.innerHTML = `${dashboardLink}<a href="#" id="logout">LEAVE</a>`;
-                });
-            }
-
-            // Alternar o dropdown ao clicar
-            document.getElementById("loginContainer").addEventListener("click", function(event) {
-                const user = firebase.auth().currentUser;
-                if (!user) return;
-
-                event.preventDefault();
-                const dropdown = document.getElementById("userDropdown");
-                dropdown.style.display = (dropdown.style.display === 'none' || dropdown.style.display === '') ? 'block' : 'none';
-            });
-
-            // Fecha o dropdown ao clicar fora dele
-            window.addEventListener("click", function(event) {
-                const dropdown = document.getElementById("userDropdown");
-                const loginContainer = document.getElementById("loginContainer");
-                if (!loginContainer.contains(event.target)) {
-                    dropdown.style.display = 'none';
-                }
-            });
-
-            // Função para deslogar
-            document.addEventListener("click", function(event) {
-                if (event.target.id === "logout") {
-                    firebase.auth().signOut().then(() => {
-                        console.log("Usuário deslogado");
-                        location.reload();
-                    }).catch((error) => {
-                        console.error("Erro ao deslogar:", error);
-                    });
-                }
-            });
-        });
-    </script>
 
     <script src="script.js"></script>
 </body>
