--- a/Level1/Unit1/listening.html
+++ b/Level1/Unit1/listening.html
@@ -4,28 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hannah English Course</title>
-    <link rel="stylesheet" href="style.css">
-
-    <!-- Firebase Configuration -->
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
-    <script>
-        const firebaseConfig = {
-            apiKey: "AIzaSyDGgo2H_hDKXF88xN7XnLFNUj8ikMY7Xdc",
-            authDomain: "hannahenglishcourse.firebaseapp.com",
-            projectId: "hannahenglishcourse",
-            storageBucket: "hannahenglishcourse.appspot.com",
-            messagingSenderId: "449818788486",
-            appId: "1:449818788486:web:8a49d3f68591e6fb3f0707",
-            measurementId: "G-07VVJG9LRS",
-            databaseURL: "https://hannahenglishcourse-default-rtdb.asia-southeast1.firebasedatabase.app"
-        };
-        firebase.initializeApp(firebaseConfig);
-    </script>
-
-    <!-- CSS para o quadro branco -->
+    
+    <!-- CSS para o quadro branco e mapa -->
     <style>
+        /* Estilo da caixa de login */
         .login-container {
             display: flex;
             align-items: center;
@@ -72,26 +54,66 @@
         .dropdown a:hover {
             background-color: #f2f2f2;
         }
+        .map-container {
+            position: relative;
+            width: 100%;
+            height: 80vh;
+            overflow: hidden;
+        }
+        .phase {
+            position: absolute;
+            cursor: pointer;
+        }
+        .phase-img {
+            width: 60px;
+            height: 60px;
+        }
+        .active {
+            opacity: 1;
+        }
+        .locked {
+            opacity: 0.5;
+        }
+        .lock-icon {
+            position: absolute;
+            top: 0;
+            right: 0;
+            width: 20px;
+            height: 20px;
+        }
     </style>
+
+    <!-- Firebase Configuration -->
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
+    <script>
+        const firebaseConfig = {
+            apiKey: "AIzaSyDGgo2H_hDKXF88xN7XnLFNUj8ikMY7Xdc",
+            authDomain: "hannahenglishcourse.firebaseapp.com",
+            projectId: "hannahenglishcourse",
+            storageBucket: "hannahenglishcourse.appspot.com",
+            messagingSenderId: "449818788486",
+            appId: "1:449818788486:web:8a49d3f68591e6fb3f0707",
+            measurementId: "G-07VVJG9LRS",
+            databaseURL: "https://hannahenglishcourse-default-rtdb.asia-southeast1.firebasedatabase.app"
+        };
+        firebase.initializeApp(firebaseConfig);
+    </script>
 </head>
 <body>
-
-    <!-- Botão Back -->
-    <a href="javascript:history.back()" class="back-button">Back</a>
-
     <!-- Quadro Branco -->
     <div class="login-container" id="loginContainer">
         <a href="Formulario/login.html" class="login-button" id="loginLink">Login</a>
         <div class="dropdown" id="userDropdown"></div>
     </div>
 
+    <!-- Mapa das fases -->
     <div class="map-container" id="mapContainer">
-        <div class="title-container">
-            <img src="../../imagens/titulo.png" alt="Hannah English Course" class="title-image">
-        </div>
         <svg id="linesSvg" class="lines-svg"></svg>
     </div>
 
+    <!-- Script principal -->
     <script src="script.js"></script>
 </body>
 </html>
