--- a/Level1/Unit1/listening.html
+++ b/Level1/Unit1/listening.html
@@ -4,86 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hannah English Course</title>
-    
-    <!-- CSS para o quadro branco e mapa -->
-    <style>
-        /* Estilo da caixa de login */
-        .login-container {
-            display: flex;
-            align-items: center;
-            gap: 10px;
-            position: absolute;
-            top: 20px;
-            right: 60px;
-            z-index: 10;
-            background-color: white;
-            padding: 10px;
-            border-radius: 8px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            cursor: pointer;
-        }
-        .user-icon {
-            width: 40px;
-            height: 40px;
-            border-radius: 50%;
-        }
-        .user-name {
-            font-size: 14px;
-            color: #333;
-            margin: 0;
-        }
-        .dropdown {
-            display: none;
-            position: absolute;
-            top: 60px;
-            right: 0;
-            background-color: white;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            z-index: 1;
-            border-radius: 4px;
-            min-width: 150px;
-        }
-        .dropdown a {
-            display: block;
-            padding: 10px;
-            text-decoration: none;
-            color: #333;
-            font-size: 16px;
-            text-align: left;
-        }
-        .dropdown a:hover {
-            background-color: #f2f2f2;
-        }
-        .map-container {
-            position: relative;
-            width: 100%;
-            height: 80vh;
-            overflow: hidden;
-        }
-        .phase {
-            position: absolute;
-            cursor: pointer;
-        }
-        .phase-img {
-            width: 60px;
-            height: 60px;
-        }
-        .active {
-            opacity: 1;
-        }
-        .locked {
-            opacity: 0.5;
-        }
-        .lock-icon {
-            position: absolute;
-            top: 0;
-            right: 0;
-            width: 20px;
-            height: 20px;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 
-    <!-- Firebase Configuration -->
+    <!-- Firebase Configuration and Initialization -->
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
@@ -98,18 +21,83 @@
             measurementId: "G-07VVJG9LRS",
             databaseURL: "https://hannahenglishcourse-default-rtdb.asia-southeast1.firebasedatabase.app"
         };
+        // Initialize Firebase
         firebase.initializeApp(firebaseConfig);
     </script>
+
+    <style>
+        /* Estilos do quadrado branco */
+        .login-container {
+            display: flex;
+            align-items: center;
+            gap: 10px;
+            position: absolute;
+            top: 20px;
+            right: 60px;
+            z-index: 10;
+            background-color: white;
+            padding: 10px;
+            border-radius: 8px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            cursor: pointer;
+        }
+
+        .user-icon {
+            width: 40px;
+            height: 40px;
+            border-radius: 50%;
+        }
+
+        .user-name {
+            font-size: 14px;
+            color: #333;
+            margin: 0;
+        }
+
+        .dropdown {
+            display: none;
+            position: absolute;
+            top: 60px;
+            right: 0;
+            background-color: white;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            z-index: 1;
+            border-radius: 4px;
+            min-width: 150px;
+        }
+
+        .dropdown a {
+            display: block;
+            padding: 10px;
+            text-decoration: none;
+            color: #333;
+            font-size: 16px;
+            text-align: left;
+        }
+
+        .dropdown a:hover {
+            background-color: #f2f2f2;
+        }
+    </style>
 </head>
 <body>
-    <!-- Quadro Branco -->
+
+    <!-- Botão Back -->
+    <a href="javascript:history.back()" class="back-button">Back</a>
+
+    <!-- Contêiner para login ou ícone de usuário -->
     <div class="login-container" id="loginContainer">
         <a href="Formulario/login.html" class="login-button" id="loginLink">Login</a>
         <div class="dropdown" id="userDropdown"></div>
     </div>
 
-    <!-- Mapa das fases -->
     <div class="map-container" id="mapContainer">
+        <!-- Imagem de título centralizada sobre o fundo -->
+        <div class="title-container">
+            <img src="../../imagens/titulo.png" alt="Hannah English Course" class="title-image">
+        </div>
+
+        <!-- SVG para as linhas -->
         <svg id="linesSvg" class="lines-svg"></svg>
     </div>
 
