--- a/Level1/Unit1/listening.html
+++ b/Level1/Unit1/listening.html
@@ -21,19 +21,18 @@
             measurementId: "G-07VVJG9LRS",
             databaseURL: "https://hannahenglishcourse-default-rtdb.asia-southeast1.firebasedatabase.app"
         };
-        // Initialize Firebase
         firebase.initializeApp(firebaseConfig);
     </script>
 
     <style>
-        /* Estilos do quadrado branco */
+        /* Estilo da caixa de login */
         .login-container {
             display: flex;
             align-items: center;
             gap: 10px;
             position: absolute;
             top: 20px;
-            right: 60px;
+            right: 20px;
             z-index: 10;
             background-color: white;
             padding: 10px;
@@ -101,7 +100,6 @@
         <svg id="linesSvg" class="lines-svg"></svg>
     </div>
 
-    <!-- Script principal -->
-    <script src="script.js"></script>
+    <script src="script - Copy.js"></script>
 </body>
 </html>
