--- a/Level1/Unit1/listening.html
+++ b/Level1/Unit1/listening.html
@@ -1,10 +1,11 @@
-<!DOCTYPE html>
+<!DOCTYPE html> 
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hannah English Course</title>
     <link rel="stylesheet" href="style.css">
+    <!-- Firebase Configuration and Initialization -->
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
@@ -19,20 +20,34 @@
             measurementId: "G-07VVJG9LRS",
             databaseURL: "https://hannahenglishcourse-default-rtdb.asia-southeast1.firebasedatabase.app"
         };
+        // Initialize Firebase
         firebase.initializeApp(firebaseConfig);
+
+        // Test Firebase connection
+        firebase.database().ref('/').once('value')
+          .then((snapshot) => {
+            console.log('Database connected:', snapshot.val());
+          })
+          .catch((error) => {
+            console.error('Error connecting to database:', error);
+          });
     </script>
-    <style>
-        /* Estilos omitidos para brevidade */
-    </style>
 </head>
 <body>
-    <div class="login-container" id="loginContainer">
-        <a href="Formulario/login.html" class="login-button" id="loginLink">Login</a>
-        <div class="dropdown" id="userDropdown"></div>
-    </div>
+
+    <!-- Botão Back -->
+    <a href="javascript:history.back()" class="back-button">Back</a>
+
     <div class="map-container" id="mapContainer">
+        <!-- Imagem de título centralizada sobre o fundo -->
+        <div class="title-container">
+            <img src="../../imagens/titulo.png" alt="Hannah English Course" class="title-image">
+        </div>
+
+        <!-- SVG para as linhas -->
         <svg id="linesSvg" class="lines-svg"></svg>
     </div>
+
     <script src="script.js"></script>
 </body>
 </html>
