--- a/Level1/Unit1/listening.html
+++ b/Level1/Unit1/listening.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html> 
 <html lang="en">
 <head>
@@ -22,18 +23,69 @@
         };
         // Initialize Firebase
         firebase.initializeApp(firebaseConfig);
-
-        // Test Firebase connection
-        firebase.database().ref('/').once('value')
-          .then((snapshot) => {
-            console.log('Database connected:', snapshot.val());
-          })
-          .catch((error) => {
-            console.error('Error connecting to database:', error);
-          });
     </script>
+    <style>
+        /* Adicionando estilo para a caixa de login */
+        .login-container {
+            display: flex;
+            align-items: center;
+            gap: 10px;
+            position: absolute;
+            top: 20px;
+            right: 60px;
+            z-index: 10;
+            background-color: white;
+            padding: 10px;
+            border-radius: 8px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            cursor: pointer;
+        }
+
+        .user-icon {
+            width: 40px;
+            height: 40px;
+            border-radius: 50%;
+        }
+
+        .user-name {
+            font-size: 14px;
+            color: #333;
+            margin: 0;
+        }
+
+        .dropdown {
+            display: none;
+            position: absolute;
+            top: 60px;
+            right: 0;
+            background-color: white;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            z-index: 1;
+            border-radius: 4px;
+            min-width: 150px;
+        }
+
+        .dropdown a {
+            display: block;
+            padding: 10px;
+            text-decoration: none;
+            color: #333;
+            font-size: 16px;
+            text-align: left;
+        }
+
+        .dropdown a:hover {
+            background-color: #f2f2f2;
+        }
+    </style>
 </head>
 <body>
+
+    <!-- Caixa de login -->
+    <div class="login-container" id="loginContainer">
+        <a href="Formulario/login.html" class="login-button" id="loginLink">Login</a>
+        <div class="dropdown" id="userDropdown"></div>
+    </div>
 
     <!-- Botão Back -->
     <a href="javascript:history.back()" class="back-button">Back</a>
