--- a/Level1/Unit1/listeninglala.html
+++ b/Level1/Unit1/listeninglala.html
@@ -100,6 +100,6 @@
         <svg id="linesSvg" class="lines-svg"></svg>
     </div>
 
-    <script src="updated_script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
