--- a/Level1/Unit1/listeninglili.html
+++ b/Level1/Unit1/listeninglili.html
@@ -24,6 +24,60 @@
         // Initialize Firebase
         firebase.initializeApp(firebaseConfig);
     </script>
+    <style>
+        /* Adicionando estilo para a caixa de login */
+        .login-container {
+            display: flex;
+            align-items: center;
+            gap: 10px;
+            position: absolute;
+            top: 20px;
+            right: 60px;
+            z-index: 10;
+            background-color: white;
+            padding: 10px;
+            border-radius: 8px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            cursor: pointer;
+        }
+
+        .user-icon {
+            width: 40px;
+            height: 40px;
+            border-radius: 50%;
+        }
+
+        .user-name {
+            font-size: 14px;
+            color: #333;
+            margin: 0;
+        }
+
+        .dropdown {
+            display: none;
+            position: absolute;
+            top: 60px;
+            right: 0;
+            background-color: white;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            z-index: 1;
+            border-radius: 4px;
+            min-width: 150px;
+        }
+
+        .dropdown a {
+            display: block;
+            padding: 10px;
+            text-decoration: none;
+            color: #333;
+            font-size: 16px;
+            text-align: left;
+        }
+
+        .dropdown a:hover {
+            background-color: #f2f2f2;
+        }
+    </style>
 </head>
 <body>
 
@@ -46,7 +100,6 @@
         <svg id="linesSvg" class="lines-svg"></svg>
     </div>
 
-    <!-- Chamando o script.js atualizado -->
-    <script src="script.js"></script>
+    <script src="updated_script.js"></script>
 </body>
 </html>
