--- a/Level1/Unit1/listening.html
+++ b/Level1/Unit1/listening.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html> 
 <html lang="en">
 <head>
@@ -23,71 +22,77 @@
         };
         // Initialize Firebase
         firebase.initializeApp(firebaseConfig);
+
+        // Test Firebase connection
+        firebase.database().ref('/').once('value')
+          .then((snapshot) => {
+            console.log('Database connected:', snapshot.val());
+          })
+          .catch((error) => {
+            console.error('Error connecting to database:', error);
+          });
     </script>
-    <style>
-        /* Ajustes CSS para responsividade e posicionamento */
-        body {
-            margin: 0;
-            padding: 0;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            overflow-x: hidden;
-        }
-        .login-container {
-            display: flex;
-            align-items: center;
-            gap: 10px;
-            position: absolute;
-            top: 20px;
-            right: 20px;
-            z-index: 10;
-            background-color: white;
-            padding: 10px;
-            border-radius: 8px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-        }
-        .map-container {
-            width: 100%;
-            max-width: 1200px;
-            position: relative;
-            margin-top: 100px;
-        }
-        .phase {
-            position: absolute;
-            cursor: pointer;
-            transition: transform 0.2s;
-        }
-        .phase-img {
-            width: 80px;
-            height: 80px;
-            transition: all 0.2s;
-        }
-        .player {
-            position: absolute;
-            width: 50px;
-            transition: top 0.5s, left 0.5s;
-        }
-        .back-button {
-            position: absolute;
-            top: 20px;
-            left: 20px;
-            padding: 10px 20px;
-            background-color: black;
-            color: white;
-            border-radius: 8px;
-            text-decoration: none;
-            z-index: 10;
-        }
-    </style>
+<!-- Caixa de Login -->
+<div id="loginContainer" class="login-container">
+    <a href="Formulario/login.html" id="loginLink" class="login-link">Login</a>
+    
+    <!-- Dropdown de Usuário -->
+    <div id="userDropdown" class="user-dropdown" style="display: none;">
+        <!-- Links para o dashboard e logout serão inseridos dinamicamente -->
+    </div>
+</div>
 </head>
 <body>
 
-    <!-- Caixa de login -->
-    <div class="login-container" id="loginContainer">
-        <a href="Formulario/login.html" class="login-button" id="loginLink">Login</a>
-        <div class="dropdown" id="userDropdown"></div>
-    </div>
+.login-container {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    display: flex;
+    align-items: center;
+}
+
+.login-link {
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+    font-size: 16px;
+    color: #000;
+}
+
+.user-icon {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    margin-right: 8px;
+}
+
+.user-name {
+    margin: 0;
+}
+
+.user-dropdown {
+    position: absolute;
+    top: 60px;
+    right: 0;
+    background-color: #fff;
+    border: 1px solid #ccc;
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.15);
+    z-index: 1000;
+    display: none;
+    flex-direction: column;
+}
+
+.user-dropdown .dropdown-item {
+    padding: 10px 20px;
+    text-decoration: none;
+    color: #333;
+    cursor: pointer;
+}
+
+.user-dropdown .dropdown-item:hover {
+    background-color: #f0f0f0;
+}
 
     <!-- Botão Back -->
     <a href="javascript:history.back()" class="back-button">Back</a>
@@ -102,7 +107,6 @@
         <svg id="linesSvg" class="lines-svg"></svg>
     </div>
 
-    <!-- Chamando o script.js atualizado -->
     <script src="script.js"></script>
 </body>
 </html>
