--- a/Level1/Unit1/listening.html
+++ b/Level1/Unit1/listening.html
@@ -41,58 +41,74 @@
         <!-- Links para o dashboard e logout serão inseridos dinamicamente -->
     </div>
 </div>
+<!-- Estilos CSS -->
+    <style>
+        .login-container {
+            position: absolute;
+            top: 20px;
+            right: 20px;
+            display: flex;
+            align-items: center;
+        }
+
+        .login-link {
+            display: flex;
+            align-items: center;
+            text-decoration: none;
+            font-size: 16px;
+            color: #000;
+        }
+
+        .user-icon {
+            width: 40px;
+            height: 40px;
+            border-radius: 50%;
+            margin-right: 8px;
+        }
+
+        .user-name {
+            margin: 0;
+        }
+
+        .user-dropdown {
+            position: absolute;
+            top: 60px;
+            right: 0;
+            background-color: #fff;
+            border: 1px solid #ccc;
+            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.15);
+            z-index: 1000;
+            display: none;
+            flex-direction: column;
+        }
+
+        .user-dropdown .dropdown-item {
+            padding: 10px 20px;
+            text-decoration: none;
+            color: #333;
+            cursor: pointer;
+        }
+
+        .user-dropdown .dropdown-item:hover {
+            background-color: #f0f0f0;
+        }
+
+        .back-button {
+            display: inline-block;
+            margin: 20px;
+            padding: 10px 20px;
+            background-color: #000;
+            color: #fff;
+            text-decoration: none;
+            border-radius: 5px;
+        }
+
+        .map-container {
+            position: relative;
+        }
+    </style>
 </head>
 <body>
-
-.login-container {
-    position: absolute;
-    top: 20px;
-    right: 20px;
-    display: flex;
-    align-items: center;
-}
-
-.login-link {
-    display: flex;
-    align-items: center;
-    text-decoration: none;
-    font-size: 16px;
-    color: #000;
-}
-
-.user-icon {
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    margin-right: 8px;
-}
-
-.user-name {
-    margin: 0;
-}
-
-.user-dropdown {
-    position: absolute;
-    top: 60px;
-    right: 0;
-    background-color: #fff;
-    border: 1px solid #ccc;
-    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.15);
-    z-index: 1000;
-    display: none;
-    flex-direction: column;
-}
-
-.user-dropdown .dropdown-item {
-    padding: 10px 20px;
-    text-decoration: none;
-    color: #333;
-    cursor: pointer;
-}
-
-.user-dropdown .dropdown-item:hover {
-    background-color: #f0f0f0;
-}
 
     <!-- Botão Back -->
     <a href="javascript:history.back()" class="back-button">Back</a>
