--- a/Level1/Unit1/listening.html
+++ b/Level1/Unit1/listening.html
@@ -68,15 +68,17 @@
             background-color: #fff;
             border: 1px solid #ccc;
             box-shadow: 0 2px 8px rgba(0, 0, 0, 0.15);
-            z-index: 1000;
+            z-index: 9999;
             display: none;
             flex-direction: column;
         }
 
         .user-dropdown .dropdown-item {
+            position: absolute;
             padding: 10px 20px;
             text-decoration: none;
             color: #333;
+            z-index: 9999
             cursor: pointer;
         }
 
