--- a/Level1/Unit1/listening.html
+++ b/Level1/Unit1/listening.html
@@ -34,72 +34,43 @@
     </script>
 <!-- Estilos CSS -->
     <style>
-        .login-container {
-            position: absolute;
-            top: 20px;
-            right: 20px;
-            display: flex;
-            align-items: center;
-        }
+    .login-container {
+        position: absolute;
+        top: 20px;
+        right: 20px;
+        display: flex;
+        align-items: center;
+        z-index: 9999; /* Valor alto para garantir que fique acima do fundo */
+    }
 
-        .login-link {
-            display: flex;
-            align-items: center;
-            text-decoration: none;
-            font-size: 16px;
-            color: #000;
-        }
+    .user-dropdown {
+        position: absolute;
+        top: 60px;
+        right: 0;
+        background-color: #fff;
+        border: 1px solid #ccc;
+        box-shadow: 0 2px 8px rgba(0, 0, 0, 0.15);
+        z-index: 9999; /* Manter acima do fundo */
+        display: none;
+        flex-direction: column;
+    }
 
-        .user-icon {
-            width: 40px;
-            height: 40px;
-            border-radius: 50%;
-            margin-right: 8px;
-        }
+    .map-container {
+        position: relative;
+        z-index: 1; /* Certifica-se de que fique abaixo da caixa de login */
+    }
 
-        .user-name {
-            margin: 0;
-        }
-
-        .user-dropdown {
-            position: absolute;
-            top: 60px;
-            right: 0;
-            background-color: #fff;
-            border: 1px solid #ccc;
-            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.15);
-            z-index: 9999;
-            display: none;
-            flex-direction: column;
-        }
-
-        .user-dropdown .dropdown-item {
-            position: absolute;
-            padding: 10px 20px;
-            text-decoration: none;
-            color: #333;
-            z-index: 9999
-            cursor: pointer;
-        }
-
-        .user-dropdown .dropdown-item:hover {
-            background-color: #f0f0f0;
-        }
-
-        .back-button {
-            display: inline-block;
-            margin: 20px;
-            padding: 10px 20px;
-            background-color: #000;
-            color: #fff;
-            text-decoration: none;
-            border-radius: 5px;
-        }
-
-        .map-container {
-            position: relative;
-        }
-    </style>
+    .back-button {
+        display: inline-block;
+        margin: 20px;
+        padding: 10px 20px;
+        background-color: #000;
+        color: #fff;
+        text-decoration: none;
+        border-radius: 5px;
+        z-index: 9999; /* Para garantir que o botão também fique acima do fundo */
+    }
+</style>
 </head>
 <body>
 <!-- Caixa de Login -->
