--- a/Level1/Unit1/listening.html
+++ b/Level1/Unit1/listening.html
@@ -40,7 +40,25 @@
         right: 20px;
         display: flex;
         align-items: center;
-        z-index: 9999; /* Valor alto para garantir que fique acima do fundo */
+        padding: 8px 12px;
+        background-color: #fff; /* Fundo branco */
+        border: 1px solid #ccc; /* Borda para o quadro */
+        border-radius: 8px; /* Bordas arredondadas */
+        box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1); /* Sombra leve */
+        z-index: 9999;
+    }
+
+    .user-icon {
+        width: 30px;
+        height: 30px;
+        border-radius: 50%;
+        margin-right: 8px;
+    }
+
+    .user-name {
+        margin: 0;
+        font-size: 14px; /* Tamanho da fonte */
+        color: #333;
     }
 
     .user-dropdown {
@@ -50,25 +68,20 @@
         background-color: #fff;
         border: 1px solid #ccc;
         box-shadow: 0 2px 8px rgba(0, 0, 0, 0.15);
-        z-index: 9999; /* Manter acima do fundo */
+        z-index: 9999;
         display: none;
         flex-direction: column;
     }
 
-    .map-container {
-        position: relative;
-        z-index: 1; /* Certifica-se de que fique abaixo da caixa de login */
+    .user-dropdown .dropdown-item {
+        padding: 10px 20px;
+        text-decoration: none;
+        color: #333;
+        cursor: pointer;
     }
 
-    .back-button {
-        display: inline-block;
-        margin: 20px;
-        padding: 10px 20px;
-        background-color: #000;
-        color: #fff;
-        text-decoration: none;
-        border-radius: 5px;
-        z-index: 9999; /* Para garantir que o botão também fique acima do fundo */
+    .user-dropdown .dropdown-item:hover {
+        background-color: #f0f0f0;
     }
 </style>
 </head>
