--- a/Level1/Unit1/listening.html
+++ b/Level1/Unit1/listening.html
@@ -83,6 +83,16 @@
     .user-dropdown .dropdown-item:hover {
         background-color: #f0f0f0;
     }
+
+.unlock-gif {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 10;
+    pointer-events: none; /* Impede interação com o GIF */
+}
 </style>
 </head>
 <body>
