--- a/Level1/Unit1/listening.html
+++ b/Level1/Unit1/listening.html
@@ -1,10 +1,11 @@
-<!DOCTYPE html> 
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hannah English Course</title>
     <link rel="stylesheet" href="style.css">
+
     <!-- Firebase Configuration and Initialization -->
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
@@ -20,122 +21,87 @@
             measurementId: "G-07VVJG9LRS",
             databaseURL: "https://hannahenglishcourse-default-rtdb.asia-southeast1.firebasedatabase.app"
         };
-        // Initialize Firebase
         firebase.initializeApp(firebaseConfig);
-
-        // Test Firebase connection
-        firebase.database().ref('/').once('value')
-          .then((snapshot) => {
-            console.log('Database connected:', snapshot.val());
-          })
-          .catch((error) => {
-            console.error('Error connecting to database:', error);
-          });
     </script>
-<!-- Estilos CSS -->
+
     <style>
-.login-link {
-    cursor: pointer;
-}
+        /* Estilos para login e dropdown */
+        .login-container {
+            position: absolute;
+            top: 20px;
+            right: 20px;
+            display: flex;
+            align-items: center;
+            padding: 8px 12px;
+            background-color: #fff;
+            border: 1px solid #ccc;
+            border-radius: 8px;
+            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+            z-index: 9999;
+            cursor: pointer;
+        }
 
-.user-dropdown {
-    display: none;
-    flex-direction: column;
-    position: absolute;
-    top: 50px;
-    right: 0;
-    background-color: #fff;
-    border: 1px solid #ccc;
-    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.15);
-    z-index: 9999;
-}
+        .user-icon {
+            width: 30px;
+            height: 30px;
+            border-radius: 50%;
+            margin-right: 8px;
+        }
 
-.user-dropdown .dropdown-item {
-    padding: 10px 20px;
-    color: #333;
-    text-decoration: none;
-}
+        .user-name {
+            margin: 0;
+            font-size: 14px;
+            color: #333;
+        }
 
-.user-dropdown .dropdown-item:hover {
-    background-color: #f0f0f0;
-}
+        .user-dropdown {
+            display: none;
+            position: absolute;
+            top: 50px;
+            right: 0;
+            background-color: #fff;
+            border: 1px solid #ccc;
+            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.15);
+            z-index: 9999;
+            flex-direction: column;
+        }
 
-    .login-container {
-        position: absolute;
-        top: 20px;
-        right: 20px;
-        display: flex;
-        align-items: center;
-        padding: 8px 12px;
-        background-color: #fff; /* Fundo branco */
-        border: 1px solid #ccc; /* Borda para o quadro */
-        border-radius: 8px; /* Bordas arredondadas */
-        box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1); /* Sombra leve */
-        z-index: 9999;
-    }
+        .user-dropdown .dropdown-item {
+            padding: 10px 20px;
+            color: #333;
+            text-decoration: none;
+            cursor: pointer;
+        }
 
-    .user-icon {
-        width: 30px;
-        height: 30px;
-        border-radius: 50%;
-        margin-right: 8px;
-    }
+        .user-dropdown .dropdown-item:hover {
+            background-color: #f0f0f0;
+        }
 
-    .user-name {
-        margin: 0;
-        font-size: 14px; /* Tamanho da fonte */
-        color: #333;
-    }
-
-    .user-dropdown {
-        position: absolute;
-        top: 60px;
-        right: 0;
-        background-color: #fff;
-        border: 1px solid #ccc;
-        box-shadow: 0 2px 8px rgba(0, 0, 0, 0.15);
-        z-index: 9999;
-        display: none;
-        flex-direction: column;
-    }
-
-    .user-dropdown .dropdown-item {
-        padding: 10px 20px;
-        text-decoration: none;
-        color: #333;
-        cursor: pointer;
-    }
-
-    .user-dropdown .dropdown-item:hover {
-        background-color: #f0f0f0;
-    }
-
-.unlock-gif {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: 10;
-    pointer-events: none; /* Impede interação com o GIF */
-}
-</style>
+        /* Outros estilos */
+        .map-container { position: relative; width: 100%; height: 100vh; }
+        .phase { position: absolute; cursor: pointer; }
+        .phase-img { width: 50px; height: 50px; }
+        .player { position: absolute; width: 30px; height: 30px; }
+        .lines-svg { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }
+        .unlock-gif { position: absolute; width: 100%; height: 100%; z-index: 10; pointer-events: none; }
+    </style>
 </head>
+
 <body>
-<!-- Caixa de Login -->
-<div id="loginContainer" class="login-container">
-    <a href="Formulario/login.html" id="loginLink" class="login-link">Login</a>
-    
-    <!-- Dropdown de Usuário -->
-    <div id="userDropdown" class="user-dropdown" style="display: none;">
-        <!-- Links para o dashboard e logout serão inseridos dinamicamente -->
+    <!-- Caixa de Login -->
+    <div id="loginContainer" class="login-container">
+        <a id="loginLink" class="login-link">Login</a>
+        <div id="userDropdown" class="user-dropdown">
+            <!-- Links do dashboard e logout serão inseridos dinamicamente -->
+        </div>
     </div>
-</div>
+
     <!-- Botão Back -->
     <a href="javascript:history.back()" class="back-button">Back</a>
 
+    <!-- Mapa com as fases -->
     <div class="map-container" id="mapContainer">
-        <!-- Imagem de título centralizada sobre o fundo -->
+        <!-- Imagem do título -->
         <div class="title-container">
             <img src="../../imagens/titulo.png" alt="Hannah English Course" class="title-image">
         </div>
@@ -144,6 +110,7 @@
         <svg id="linesSvg" class="lines-svg"></svg>
     </div>
 
+    <!-- Script JS -->
     <script src="script.js"></script>
 </body>
 </html>
