--- a/Level1/Unit1/listeninghoje - Copy (3).html
+++ b/Level1/Unit1/listeninghoje - Copy (3).html
@@ -1,4 +1,4 @@
-<!DOCTYPE html> 
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -22,115 +22,72 @@
         };
         // Initialize Firebase
         firebase.initializeApp(firebaseConfig);
-
-        // Test Firebase connection
-        firebase.database().ref('/').once('value')
-          .then((snapshot) => {
-            console.log('Database connected:', snapshot.val());
-          })
-          .catch((error) => {
-            console.error('Error connecting to database:', error);
-          });
     </script>
-<!-- Estilos CSS -->
     <style>
-.login-link {
-    cursor: pointer;
-}
-
-.user-dropdown {
-    display: none;
-    flex-direction: column;
-    position: absolute;
-    top: 50px;
-    right: 0;
-    background-color: #fff;
-    border: 1px solid #ccc;
-    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.15);
-    z-index: 9999;
-}
-
-.user-dropdown .dropdown-item {
-    padding: 10px 20px;
-    color: #333;
-    text-decoration: none;
-}
-
-.user-dropdown .dropdown-item:hover {
-    background-color: #f0f0f0;
-}
-
-    .login-container {
-        position: absolute;
-        top: 20px;
-        right: 20px;
-        display: flex;
-        align-items: center;
-        padding: 8px 12px;
-        background-color: #fff; /* Fundo branco */
-        border: 1px solid #ccc; /* Borda para o quadro */
-        border-radius: 8px; /* Bordas arredondadas */
-        box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1); /* Sombra leve */
-        z-index: 9999;
-    }
-
-    .user-icon {
-        width: 30px;
-        height: 30px;
-        border-radius: 50%;
-        margin-right: 8px;
-    }
-
-    .user-name {
-        margin: 0;
-        font-size: 14px; /* Tamanho da fonte */
-        color: #333;
-    }
-
-    .user-dropdown {
-        position: absolute;
-        top: 60px;
-        right: 0;
-        background-color: #fff;
-        border: 1px solid #ccc;
-        box-shadow: 0 2px 8px rgba(0, 0, 0, 0.15);
-        z-index: 9999;
-        display: none;
-        flex-direction: column;
-    }
-
-    .user-dropdown .dropdown-item {
-        padding: 10px 20px;
-        text-decoration: none;
-        color: #333;
-        cursor: pointer;
-    }
-
-    .user-dropdown .dropdown-item:hover {
-        background-color: #f0f0f0;
-    }
-
-.unlock-gif {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: 10;
-    pointer-events: none; /* Impede interação com o GIF */
-}
-</style>
+        .login-link { cursor: pointer; }
+        .user-dropdown {
+            display: none;
+            flex-direction: column;
+            position: absolute;
+            top: 50px;
+            right: 0;
+            background-color: #fff;
+            border: 1px solid #ccc;
+            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.15);
+            z-index: 9999;
+        }
+        .user-dropdown .dropdown-item {
+            padding: 10px 20px;
+            color: #333;
+            text-decoration: none;
+        }
+        .user-dropdown .dropdown-item:hover {
+            background-color: #f0f0f0;
+        }
+        .login-container {
+            position: absolute;
+            top: 20px;
+            right: 20px;
+            display: flex;
+            align-items: center;
+            padding: 8px 12px;
+            background-color: #fff;
+            border: 1px solid #ccc;
+            border-radius: 8px;
+            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+            z-index: 9999;
+        }
+        .user-icon {
+            width: 30px;
+            height: 30px;
+            border-radius: 50%;
+            margin-right: 8px;
+        }
+        .user-name {
+            margin: 0;
+            font-size: 14px;
+            color: #333;
+        }
+        .unlock-gif {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            z-index: 10;
+            pointer-events: none;
+        }
+    </style>
 </head>
 <body>
-<!-- Caixa de Login -->
-<div id="loginContainer" class="login-container">
-    <a href="Formulario/login.html" id="loginLink" class="login-link">Login</a>
-    
-    <!-- Dropdown de Usuário -->
-    <div id="userDropdown" class="user-dropdown" style="display: none;">
-        <!-- Links para o dashboard e logout serão inseridos dinamicamente -->
+    <!-- Caixa de Login -->
+    <div id="loginContainer" class="login-container">
+        <a href="Formulario/login.html" id="loginLink" class="login-link">Login</a>
+        <!-- Dropdown de Usuário -->
+        <div id="userDropdown" class="user-dropdown">
+            <!-- Links para o dashboard e logout serão inseridos dinamicamente -->
+        </div>
     </div>
-</div>
     <!-- Botão Back -->
     <a href="javascript:history.back()" class="back-button">Back</a>
 
