--- a/Level1/index.html
+++ b/Level1/index.html
@@ -68,10 +68,12 @@
 </head>
 <body>
     <div class="map-container">
-        <header>
-            <h1 style="text-align: center;">Select a Unit</h1>
+        <header style="text-align: center;">
+            <h1>Select a Unit</h1>
+           </header>
+       <div style="text-align: center;">
             <button class="back-button" onclick="window.location.href='../index.html';">Back</button>
-        </header>
+        </div>
         <main>
             <div class="units">
                 <a href="Unit1/index.html" id="unit1" class="unit-button">Unit 1</a>
