--- a/Level1/index.html
+++ b/Level1/index.html
@@ -16,6 +16,15 @@
             overflow-y: auto;
         }
 
+       .level-display {
+           display: block;
+           margin-top: 10px; /* Adiciona um espaço entre o título e o nível */
+           font-family: Times, serif;
+           font-weight: bold;
+           color: black;
+           font-size: 24px;
+        }
+
         .back-button {
             display: block;
             margin: 20px auto;
@@ -70,7 +79,7 @@
     <div class="map-container">
         <header style="text-align: center;">
             <h1>Select a Unit</h1>
-            <div id="level-display" style="font-family: Times, serif; font-weight: bold; color: black; margin-top: 10px;"></div>
+            <div id="level-display" class="level-display"></div> 
            </header>
        <div style="text-align: center;">
             <button class="back-button" onclick="window.location.href='../index.html';">Back</button>
