--- a/Level1/index.html
+++ b/Level1/index.html
@@ -17,12 +17,13 @@
         }
 
        .level-display {
-           display: block;
+           display: block; /* Garante que o texto esteja em uma nova linha */
            margin-top: 10px; /* Adiciona um espaço entre o título e o nível */
            font-family: Times, serif;
            font-weight: bold;
            color: black;
            font-size: 24px;
+           text-align: center;
         }
 
         .back-button {
