--- a/Level1/index.html
+++ b/Level1/index.html
@@ -16,7 +16,7 @@
             overflow-y: auto;
         }
 
-       .level-display {
+       #level-display {
            display: block; /* Garante que o texto esteja em uma nova linha */
            margin-top: 10px; /* Adiciona um espaço entre o título e o nível */
            font-family: Times, serif;
