--- a/Level1/index.html
+++ b/Level1/index.html
@@ -24,6 +24,7 @@
            color: black;
            font-size: 24px;
            text-align: center;
+           clear: both; /* Garante que fique em uma nova linha */
         }
 
         .back-button {
@@ -80,7 +81,7 @@
     <div class="map-container">
         <header style="text-align: center;">
             <h1>Select a Unit</h1>
-            <div id="level-display"></div> 
+            <div id="level-display" style="margin-top: 10px;"></div>
            </header>
        <div style="text-align: center;">
             <button class="back-button" onclick="window.location.href='../index.html';">Back</button>
