--- a/Level1/index.html
+++ b/Level1/index.html
@@ -16,16 +16,21 @@
             overflow-y: auto;
         }
 
+       .header-container {
+           display: flex;
+           flex-direction: column; /* Organiza em coluna */
+           align-items: center; /* Centraliza os itens */
+           text-align: center;
+
+       }
        .level-display {
-           display: block; /* Garante que o texto esteja em uma nova linha */
            margin-top: 10px; /* Adiciona um espaço entre o título e o nível */
            font-family: Times, serif;
            font-weight: bold;
            color: black;
            font-size: 24px;
            text-align: center;
-           clear: both; /* Garante que fique em uma nova linha */
-        }
+       }
 
         .back-button {
             display: block;
