--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 
             <div class="logo-title">
                 <img src="imagens/hannah_logo.png" alt="Hannah English Logo" class="logo">
-                <h1>Hannah English<br>Learning English with the Bible</h1>
+                <h1>Hannah English<br>Learning English through Bible Stories</h1>
             </div>
         </header>
         
